# HQReader

./: CMakeLists.txt  README.md
Code/inc/: 433MHzTR_API.h
Code/src/: main.c
Script/: QT-Creator-CMAKE-Args.txt  README
